test/fail/elif_no_if.min
program start
    elif 3 >= 2 then 4! fi
end
